ams-gateway-api/ams-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ams-web
spec:
  gatewayClassName: example
  listeners:
  - protocol: HTTP
    port: 80
    name: ams-web-gw
    allowedRoutes:
      namespaces:
        from: Same
